--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Meus exercícios</h1>
     <p><a href="desafio01/index.html">Antecessor e Sucessor</a></p>
+    <p><a href="desafio02/index.html">Sorteador de números</a></p>
 </body>
 </html>
