--- a/desafio05/index.html
+++ b/desafio05/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Conversor de dolar</title>
+    <title>Comparador de números reais</title>
 </head>
 <body>
     <header>
-        <h1>Converta o Real para Dólar</h1>
+        <h1>Comparador de números reais</h1>
     </header>
     <section>
         <form action="calc.php" method="post">
             <label for="num">Valor: </label>
-            <input type="number" name="num" id="num" placeholder="Informe o válor em Real (R$)" step="0.010"><br>
+            <input type="number" name="num" id="num" placeholder="Informe o valor em Real(R$)" step="0.001"><br>
             <input type="submit" value="Enviar">
         </form>
     </section>
