--- a/Prova LVI/páginas/cardapio.html
+++ b/Prova LVI/páginas/cardapio.html
@@ -13,27 +13,26 @@
         <h1>Cardápio</h1>
         <ul>
             <li><a href="pedido.php">Faça seu pedido</a></li>
-            <li><a href="../form.php">Página inicial</a></li>
         </ul>
     </header>
     <main>
         <div id="princip">
             <section id="cardapio">
                 <div id="hamburguer" class="primeiro"><img src="../imagens/hamburguer1.jpg" alt="">
-                <p>Bahea burguer</p>
+                <p>Bahea burguer - 25R$</p>
                 </div>
 
                 <div id="hamburguer"><img src="../imagens/hamburguer2.jpg" alt="">
-                <p>Pelourinho</p>
+                <p>Pelourinho - 28R$</p>
                 </div>
                 <br>
 
                 <div id="hamburguer" class="primeiro"><img src="../imagens/hamburguer3.jpg" alt="" id="pri">
-                <p>Salvador</p>
+                <p>Salvador - 30R$</p>
                 </div>
 
                 <div id="hamburguer"><img src="../imagens/hamburguer4.jpg" alt="">
-                <p>Hambúrguer Infantil</p>
+                <p>Hambúrguer Infantil - 20R$</p>
                 </div>
             </section>
         </div>
